--- a/style.css
+++ b/style.css
@@ -1,30 +1,27 @@
 .start h1{
   font-size: 80px;
   color: orange;
-  font-family: Georia;
+  font-family: Georgia;
   font-style: bold;
 }
 h1{
   font-size: 40px;
   color: orange;
-  font-family: Georia;
+  font-family: Georgia;
   font-style: bold;
 }
-.backgroundpic{
-}
-.start h4{
-  color: gray;
+marquee{
+  color: lightgray;
   font-size: 20px;
   padding-top: 10px;
   padding-bottom: 50px;
-  font-style: cursive;
 }
 .author{
   border-top: 1px solid lightgray; 
   border-bottom: 1px solid lightgray;
   color: lightgray;   
 }
-body{
+html{
   text-align: center;
   background: #141E30;
   background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
@@ -42,8 +39,8 @@ p{
   border-radius: 10px;
   color: white;
   display: inline-block;
-  margin: 10px;
   padding: 14px;
+  margin: 10px;
   text-decoration: none;
   text-align: left;
 }
@@ -52,7 +49,56 @@ p{
   border: 1px solid orange;
   color: orange;
 }
-.backgroundcolor1{
-  background-color: black;
-  
+.image1{
+  width: 200px;
+  border: 3px dotted orange;
 }
+h5, h3{
+  color: orange;
+  font-family: Georgia;
+  font-weight: bold;
+}
+.caption {
+  display: block;
+  font-family: 'Playfair Display', serif;
+  font-size: 17px;
+  font-style: italic;
+  line-height: 14px;
+  margin-left: 20px;
+  padding: 10px;
+  position: relative;
+  top: 80%;
+  width: 60%;
+  background-color: white;
+  color: black;
+  opacity: 0.65;
+}
+.image2 {
+  background-image: url(http://www.trbimg.com/img-5840600d/turbine/ct-trump-guns-nra-20161201);
+  background-size: cover;
+  display: block;
+  background-position: center;
+  height: 700px;
+  border: 5px dotted orange;
+}
+.orange {
+  color: orange;
+  font-family: Georgia;
+  float: left;
+  font-size: 25px;
+}
+h4{
+  color: white;
+}
+a{
+ color: white;
+ padding-top: 20px;
+ padding-bottom: 20px; 
+ 
+}
+ul {
+    width: 13%;
+    margin: auto;
+  color: white;
+}
+
