--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
+gameButton {
+  background-color: #red;;
+  font-size: 20px;
+  font-color: #white;
+  padding: 12px 28px;
+  border: 2px solid #red;
+  border-radius: 12px;
+}
 
+gameButton:hover {
+  background-color: #white;
+  font-size: 20px;
+  font-color: #red;
+  padding: 12px 28px;
+  border: 2px solid #red;
+  border-radius: 12px;
+}
