--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 .gameButton {
-  background-color: #red;;
+  background-color: #ff0000;;
   font-size: 20px;
-  font-color: #white;
+  font-color: ##ffffff;
   padding: 12px 28px;
-  border: 2px solid #red;
+  border: 2px solid #ff0000;
   border-radius: 12px;
 }
 
 .gameButton:hover {
-  background-color: #white;
+  background-color: ##ffffff;
   font-size: 20px;
-  font-color: #red;
+  font-color: #ff0000;
   padding: 12px 28px;
-  border: 2px solid #red;
+  border: 2px solid #ff0000;
   border-radius: 12px;
 }
