--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .btn:hover {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   font-size: 20px;
   font-color: #ff0000;
   padding: 12px 28px;
