--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .btn {
   background-color: #ff0000;;
   font-size: 20px;
-  font-color: #f2f2f2;
+  font-color: #ffffff;
   padding: 12px 28px;
-  border: 2px solid #ff0000;
+  border: 2px solid #ffffff;
   border-radius: 12px;
 }
 
