--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@
   border: 2px solid #ff0000;
   border-radius: 12px;
 }
+
+.sbtn {
+  background-color: #ff0000;;
+  font-size: 20px;
+  font-color: #ffffff;
+  padding: 12px 28px;
+  border: 2px solid #ffffff;
+  border-radius: 12px;
+  display: none;
+}
