--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .play_btn {
-  color: red;
-  height: 250px;
-  width: 500px;
+  background-color: #00ff00;
+  color: #ffffff;
+  border-radius: 5px;
+  border: 5px solid black;
 }
