--- a/style.css
+++ b/style.css
@@ -5,5 +5,6 @@
   color: #ffffff;
   border-radius: 5px;
   border: 5px solid black;
-  font-size: 40px;
+  font-size: 55px;
+  font-family: "Times New Roman";
 }
