--- a/style.css
+++ b/style.css
@@ -4,7 +4,18 @@
   background-color: #00ff00;
   color: #ffffff;
   border-radius: 25px;
-  border: 5px solid black;
+  border: 5px solid #00ff00;
+  font-size: 55px;
+  font-family: "Times New Roman";
+}
+
+.play_btn:hover {
+  height: 150px;
+  width: 300px;  
+  background-color: #ffffff;
+  color: #00ff00;
+  border-radius: 25px;
+  border: 5px solid #00ff00;
   font-size: 55px;
   font-family: "Times New Roman";
 }
