--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   border: 5px solid #00ff00;
   font-size: 55px;
   font-family: "Times New Roman";
+  margin: auto;
 }
 
 .play_btn:hover {
@@ -18,4 +19,5 @@
   border: 5px solid #00ff00;
   font-size: 55px;
   font-family: "Times New Roman";
+  margin: auto;
 }
