--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
  font-size: 80px;
 }
 
+.Mon {
+ font-family: 'Montserrat', arial;
+ font-size: 60px;
+}
+
 .play_btn {
   height: 150px;
   width: 300px;  
