--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
   background-color: #0000ff;
   color: #ffffff;
   border-radius: 25px;
-  border: 2px solid #ff0000;
+  border: 2px solid #0000ff;
   font-size: 22px;
   font-family: "Times New Roman"; 
 }
@@ -69,7 +69,7 @@
   background-color: #ffffff;
   color: #0000ff;
   border-radius: 25px;
-  border: 2px solid #ff0000;
+  border: 2px solid #0000ff;
   font-size: 22px;
   font-family: "Times New Roman"; 
 }
