ade all text Times New Roman with css

--- a/style.css
+++ b/style.css
@@ -1,75 +1,4 @@
-.Spartan {
- font-family: 'League Spartan Bold', arial;
- font-size: 80px;
-}
 
-.Mon {
- font-family: 'Montserrat', arial;
- font-size: 60px;
-}
-
-.play_btn {
-  height: 150px;
-  width: 300px;  
-  background-color: #00ff00;
-  color: #ffffff;
-  border-radius: 25px;
-  border: 5px solid #00ff00;
-  font-size: 55px;
-  font-family: "Times New Roman";
-}
-
-.play_btn:hover {
-  height: 150px;
-  width: 300px;  
-  background-color: #ffffff;
-  color: #00ff00;
-  border-radius: 25px;
-  border: 5px solid #00ff00;
-  font-size: 55px;
-  font-family: "Times New Roman";
-}
-
-.back_btn {
-  height: 60px;
-  width: 120px;  
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 25px;
-  border: 2px solid #ff0000;
-  font-size: 22px;
-  font-family: "Times New Roman"; 
-}
-
-.back_btn:hover {
-  height: 60px;
-  width: 120px;  
-  background-color: #ffffff;
-  color: #ff0000;
-  border-radius: 25px;
-  border: 2px solid #ff0000;
-  font-size: 22px;
-  font-family: "Times New Roman"; 
-}
-
-.upgrade_btn {
-  height: 60px;
-  width: 180px;  
-  background-color: #0000ff;
-  color: #ffffff;
-  border-radius: 25px;
-  border: 2px solid #0000ff;
-  font-size: 22px;
-  font-family: "Times New Roman"; 
-}
-
-.upgrade_btn:hover {
-  height: 60px;
-  width: 180px;  
-  background-color: #ffffff;
-  color: #0000ff;
-  border-radius: 25px;
-  border: 2px solid #0000ff;
-  font-size: 22px;
-  font-family: "Times New Roman"; 
+html {
+  font-family: 'Times New Roman';
 }
